Initial Check-in.

--- a/Content/Bits and pieces/_feature-scrolling-window.htm
+++ b/Content/Bits and pieces/_feature-scrolling-window.htm
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="719" MadCap:lastWidth="433">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head><title>Windows with scrolled areas</title>
     </head>
     <body>
-        <h1 class="title">Testing windows with scrolled areas</h1>
+        <h1 class="title">Testing windows with scrolled areasz</h1>
         <p>There are cases where not all the content available on an application page is visible at the same time. For example the entire window may be scrollable, or a particular element in the window may be scrollable. In this case, some extra steps need to be taken to ensure that the image grabbed at a checkpoint includes all the information on the page and not only that part which is currently visible.</p>
         <p><MadCap:variable name="General.ProductName" /> provides the following APIs to deal with this:</p>
         <table style="width: 100%;">
