--- a/Content/A_NOTES/gituhub integration.htm
+++ b/Content/A_NOTES/gituhub integration.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1 class="title">Branching Notes</h1>
-        <h2 class="title">&#160;Notes :&#160;About Branching</h2>
+        <h2 class="title">&#160;Notes :&#160;About Branching!</h2>
         <p>18:30 - start</p>
         <p>1. When workflows can take advanatage of branching ?</p>
         <p>1.1 Maintain multiple app versions in parallel v3.1 , v3.2 </p>
